Hook modifier work when created with Ctrl+H, but not when created via modifier pane #37085

Closed
opened 2013-10-15 10:45:09 +02:00 by Michael Soegtrop · 4 comments

%%%--- Operating System, Graphics card ---

Windows 7, 64 bit, nVidia Quadro 4000

- Blender version with error, and version that worked ---

Error in 2.64a and 2.67b.
Last version I tried where this works is 2.49b.
I didn't try this in any version between 2.49b and 2.64a (usually I use Ctrl+H).

- Short description of error ---

Hook modifier work when created with Ctrl+H, but not when created via modifier pane

- Steps for others to reproduce the error (preferably based on attached .blend file) ---

When I create a hook with Ctrl+H and hook to new object, the hook works as expected.

When I create a hook as follows:

Create new cube mesh.
Create an empty at the point of a vertex of teh mesh.
Either in object or edit mode of the cube mesh, create a new hook modifier.
Choose the empty as object in the hook modifier.
In edit mode for the cube, select the vertex where the empty is and press assign in the hook modifier.
Go back to object mode.

the hooked vertex is always at the center of the object. It is not affected by the hook in any way.

When the hook is created with Ctrl+H and hook to new object, everythign works well. Also reassigning vertices works.
%%%

%%%--- Operating System, Graphics card --- Windows 7, 64 bit, nVidia Quadro 4000 - Blender version with error, and version that worked --- Error in 2.64a and 2.67b. Last version I tried where this works is 2.49b. I didn't try this in any version between 2.49b and 2.64a (usually I use Ctrl+H). - Short description of error --- Hook modifier work when created with Ctrl+H, but not when created via modifier pane - Steps for others to reproduce the error (preferably based on attached .blend file) --- When I create a hook with Ctrl+H and hook to new object, the hook works as expected. When I create a hook as follows: Create new cube mesh. Create an empty at the point of a vertex of teh mesh. Either in object or edit mode of the cube mesh, create a new hook modifier. Choose the empty as object in the hook modifier. In edit mode for the cube, select the vertex where the empty is and press assign in the hook modifier. Go back to object mode. the hooked vertex is always at the center of the object. It is not affected by the hook in any way. When the hook is created with Ctrl+H and hook to new object, everythign works well. Also reassigning vertices works. %%%

Changed status to: 'Open'

Changed status to: 'Open'

%%%I could reproduce this, however, if i click on "Reset" after hitting "Assign" it works as expected.
So maybe it's not a bug but just crappy behavior of the modifier.
%%%

%%%I could reproduce this, however, if i click on "Reset" after hitting "Assign" it works as expected. So maybe it's not a bug but just crappy behavior of the modifier. %%%

%%%Fixed in r60777, was indeed missing a "reset"-like action here. Thanks for the report. :)%%%

%%%Fixed in r60777, was indeed missing a "reset"-like action here. Thanks for the report. :)%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#37085
No description provided.