Fix [#37085] Hook modifier work when created with Ctrl+H, but not when created via modifier panel

"transform matrix" of the hook was not inited (reset) when assinging and object to it, now use same code for both OBJECT_OT_hook_reset operator and RNA object assignement.

Reviewed by Brecht, thanks.